# data-streaming

./: .gitignore  README.md  flake.nix
.metals/: metals.mv.db
.scala-build/.bloop/: data-streaming_d5c0a6989e-test.json  data-streaming_d5c0a6989e.json
task1/: .gitignore  Cargo.toml  README.md  stock_data.txt
task1/src/: error.rs  main.rs  model.rs
task2/: .gitignore
task2/client/: Cargo.toml
task2/client/src/: error.rs  main.rs  model.rs
task2/sample/: Cargo.toml  README.md
task2/server/: Cargo.toml  stock_data.txt
task2/server/src/: main.rs
task3/: .gitignore
task3/client/: Cargo.toml
task3/client/src/: main.rs  model.rs  utils.rs
task3/server/: stock_data.txt
task3/server/src/: error.rs
task4/: .gitignore
task4/client/: README.md  package.json  pnpm-lock.yaml
task4/client/src/: App.tsx
task4/middle-server/: Cargo.toml
task4/middle-server/src/: error.rs  handlers.rs  main.rs  model.rs  stat.rs  utils.rs
task4/middle-server/src/error/: app.rs  window.rs  ws.rs
task4/middle-server/src/handlers/: count_window.rs  time_window.rs  websocket.rs
task4/middle-server/src/middleware/: socket.rs
task4/middle-server/src/model/: args.rs  response.rs  shared_state.rs  stat.rs  stock_data.rs  window_data.rs
task4/middle-server/src/stat/: create_stat.rs  show.rs
task4/middle-server/src/utils/: args.rs  web_socket.rs  websocket.rs
task4/middle-server/src/window/: count_window.rs  time_window.rs
task5/: .gitignore
task5/client/: pnpm-lock.yaml
task5/middle-server/: .gitignore  README.md  build.sbt  pom.xml
(+32 files in other folders)
